fixed button alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -122,5 +122,5 @@ body {
     width: 150px;
     font-size: 25px;
     height: 40px;
-    padding-top: 3px;
+    padding-top: 1px;
 }
